# kuavo-navigation-mid360-gazebo

./: README.en.md  README.md
kuavo-ros-opensource/: .gitignore  CHANGELOG.md  LICENSE
kuavo-ros-opensource/docs/: kuavo更新日志.md  sidebars.js  运动控制API.md
kuavo-ros-opensource/docs/3调试教程/: Kuavo 5-W 全身零点标定.md  Kuavo 5-W 启动前准备.md
kuavo-ros-opensource/docs/5功能案例/: 案例目录.md
kuavo-ros-opensource/docs/8上下位机镜像烧录/: 上位机AGX烧录镜像.md  上位机NX烧录镜像.md  下位机烧录镜像.md
kuavo-ros-opensource/installed/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
kuavo-ros-opensource/installed/tests/: CMakeLists.txt  wheel_arm_ec_test.cpp
kuavo-ros-opensource/lcm/: CMakeLists.txt
kuavo-ros-opensource/scripts/: kuavo_environment_setup.sh
kuavo-ros-opensource/src/kuavo_humanoid_sdk/: README.md  gen_docs.sh  install.sh  setup.py
kuavo-ros-opensource/src/kuavo_msgs/: CMakeLists.txt
kuavo-ros-opensource/src/kuavo_solver/: CMakeLists.txt
kuavo-ros-opensource/src/manipulation_nodes/motion_capture_ik/: CMakeLists.txt  package.xml
kuavo-ros-opensource/src/manipulation_nodes/motion_capture_ik/include/motion_capture_ik/: ArmControlBaseROS.h  ArmLengthMeasurement.h  BaseIKSolver.h  JoyStickHandler.h  OneStageIKEndEffector.h  Quest3ArmInfoTransformer.h  Quest3IkIncrementalROS.h
kuavo-ros-opensource/src/manipulation_nodes/motion_capture_ik/scripts/examples/: example_fk_srv.py
kuavo-ros-opensource/src/manipulation_nodes/motion_capture_ik/src/: ArmControlBaseROS.cpp  ArmLengthMeasurement.cpp  BaseIKSolver.cpp  JoyStickHandler.cpp  OneStageIKEndEffector.cpp  Quest3IkIncrementalROS.cpp  TwoStageTorsoIKRec.cpp  arms_ik_node.cpp
kuavo-ros-opensource/src/mujoco/: CMakeLists.txt  package.xml
kuavo-ros-opensource/tools/check_tool/: Hardware_tool.py  dexhand_test.sh  motorevo_tool.sh
kuavo_ros_application/: .gitignore  CHANGELOG.md  Dockerfile.ros-noetic  README.md  build-ros-docker.sh  docker-compose.ros-noetic.yml  run-ros-docker-daemon.sh  run-ros-docker.sh
kuavo_ros_application/demo_test/action_scripts/: kuavo_tools.sh
kuavo_ros_application/demo_test/apriltag_detection/: apriltag_results.txt  get_tag_info.py  readme.md  start_apriltag_detection.sh  tags.yaml  测试说明.md
kuavo_ros_application/demo_test/yolo_detection/: readme.md  start_detection_box.sh  yolo_box_info.txt  测试说明.md  (+1 more)
kuavo_ros_application/docs/: 解析dynamic_biped功能包.md
kuavo_ros_application/src/dynamic_biped/: CMakeLists.txt  biped_s4_head.rviz  package.xml
kuavo_ros_application/src/dynamic_biped/include/: PoseTransformer.h  TagTracker.h
kuavo_ros_application/src/dynamic_biped/launch/: apriltag.launch  kuavo5_sensor_only_enable.launch  kuavo5_sensor_robot_enable.launch  load_all_sensor.launch  load_robot_head.launch  orbbec_sensor_only_enable.launch  orbbec_sensor_robot_enable.launch  sensor_apriltag_only_enable.launch  sensor_only_enable.launch  sensor_robot_enable.launch
kuavo_ros_application/src/dynamic_biped/msg/: jointData.msg  sensorsData.msg
kuavo_ros_application/src/dynamic_biped/src/: PoseTransformer.cpp  TagTracker.cpp  joint_state_republisher.cpp
kuavo_ros_application/src/edge_llm/qwen_txt/: CMakeLists.txt  README.md  package.xml
kuavo_ros_application/src/edge_llm/qwen_txt/launch/: qwen_text.launch
kuavo_ros_application/src/edge_llm/qwen_txt/msg/: QwenResponse.msg
kuavo_ros_application/src/edge_llm/qwen_txt/scripts/: main.py  test_llm.sh  test_qwen_node.py
kuavo_ros_application/src/edge_llm/qwen_txt/srv/: QwenQuery.srv
kuavo_ros_application/src/edge_llm/qwen_vl/: CMakeLists.txt  package.xml
kuavo_ros_application/src/edge_llm/qwen_vl/launch/: qwen_vl.launch
kuavo_ros_application/src/edge_llm/qwen_vl/msg/: QwenVLResponse.msg
kuavo_ros_application/src/edge_llm/qwen_vl/scripts/: main.py  test_qwen_vl_node.sh  test_vl_api.py
kuavo_ros_application/src/edge_llm/qwen_vl/srv/: QwenVLQueryBase64.srv  QwenVLQueryPath.srv
kuavo_ros_application/src/edge_llm/qwen_vl/tests/: convert_image_to_base64.py  create_test_image.py  qwen_vl_test_utils.py  test_qwen_vl_base64_service.py  test_qwen_vl_node.sh  test_qwen_vl_path_service.py  test_qwen_vl_text_dialog.py  test_qwen_vl_text_only_service.py
kuavo_ros_application/src/edge_llm/qwen_vl/tools/: run_qwen_vl_api.sh
kuavo_ros_application/src/kuavo_slam_ws/src/kuavo_mapping/: CMakeLists.txt  package.xml
kuavo_ros_application/src/kuavo_slam_ws/src/kuavo_mapping/config/: mid360_filter.yaml  mid360_sim.yaml
kuavo_ros_application/src/kuavo_slam_ws/src/kuavo_mapping/launch/: build_map.launch  build_map_sim.launch  load_map.launch  navigation_service.launch
kuavo_ros_application/src/kuavo_slam_ws/src/kuavo_mapping/rviz/: load_map.rviz
kuavo_ros_application/src/kuavo_slam_ws/src/kuavo_mapping/scripts/: clear_pcd.sh  downsample_pcd.py  map_manager.py  navigation_service.py  save_map.sh  task_point_client.py  update_task_points_db.py
kuavo_ros_application/src/kuavo_slam_ws/src/pointcloud_converter/: CMakeLists.txt  FIXED_SOLUTION.md  README.md  USAGE.md  package.xml
kuavo_ros_application/src/kuavo_slam_ws/src/pointcloud_converter/config/: hesai_converter.yaml
kuavo_ros_application/src/kuavo_slam_ws/src/pointcloud_converter/launch/: hesai_converter.launch  livox_sim_bridge.launch  simple_converter.launch  test_converter.launch
kuavo_ros_application/src/kuavo_slam_ws/src/pointcloud_converter/scripts/: debug_topics.py  quick_test.sh  test_debug.sh
kuavo_ros_application/src/kuavo_slam_ws/src/pointcloud_converter/src/: hesai_to_velodyne_converter.cpp  livox_sim_bridge.cpp
kuavo_ros_application/src/stair_alignment/: CMakeLists.txt  README.md  package.xml
kuavo_ros_application/src/stair_alignment/config/: config.json
kuavo_ros_application/src/stair_alignment/launch/: stair_alignment.launch
kuavo_ros_application/src/stair_alignment/msg/: StairAlignmentStatus.msg
kuavo_ros_application/src/stair_alignment/scripts/: example_client.py  realtime_tag_info_printer.py  stair_alignment_node.py  stair_alignment_service.py  stair_close_to_tag.py  test_stair_alignment.py
kuavo_ros_application/src/stair_alignment/scripts/common/: config.py  utils.py
(+829 files in other folders)
