<?xml version="1.0"?>
<package format="2">
  <name>qwen_txt</name>
  <version>0.1.0</version>
  <description>ROS package for Qwen text LLM service and topic interface</description>

  <maintainer email="dev@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <exec_depend>python3-requests</exec_depend>

</package>
